--- a/publish.yaml
+++ b/publish.yaml
@@ -1,12 +1,15 @@
-Type: Application
-Name: image-compress
-Version: 0.0.11
+Edition: 3.0.0
+Type: Project
+Name: image-compress-v3
+Version: 0.0.2
 Provider:
   - 阿里云
 Description: 使用函数计算进行图片压缩
 HomePage: https://github.com/rsonghuster/image-compress
+Organization: 阿里云函数计算（FC）
+Effective: Public
 Tags:
-  - 图片压缩
+  - 图片压缩处理
 Category: 图文处理
 Service:
   函数计算:
@@ -17,7 +20,6 @@ Parameters:
   additionalProperties: false # 不允许增加其他属性
   required: # 必填项
     - region
-    - serviceName
     - functionName
     - roleArn
   properties:
@@ -47,16 +49,10 @@ Parameters:
         - us-west-1
         - us-east-1
         - ap-south-1
-    serviceName:
-      title: 服务名
-      type: string
-      default: image-compress
-      pattern: "^[a-zA-Z_][a-zA-Z0-9-_]{0,127}$"
-      description: 应用所属的函数计算服务,只能包含字母、数字、下划线和中划线。不能以数字、中划线开头。长度在 1-128 之间
     functionName:
       title: 函数名
       type: string
-      default: images-compress
+      default: images-compress-${default-suffix}
       pattern: "^[a-zA-Z_][a-zA-Z0-9-_]{0,63}$"
       description: 应用的函数名称, 只能包含字母、数字、下划线和中划线。不能以数字、中划线开头。长度在 1-64 之间
     roleArn:
@@ -64,13 +60,10 @@ Parameters:
       type: string
       default: ""
       pattern: "^acs:ram::[0-9]*:role/.*$"
-      description: "函数计算访问其他云服务时使用的服务角色，需要填写具体的角色ARN，格式为acs:ram::$account-id>:role/$role-name。例如：acs:ram::14310000000:role/aliyunfcdefaultrole。
-      \n如果您没有特殊要求，可以使用函数计算提供的默认的服务角色，即AliyunFCDefaultRole, 并增加 AliyunOSSFullAccess 权限。如果您首次使用函数计算，可以访问 https://fcnext.console.aliyun.com 进行授权。
-      \n详细文档参考 https://help.aliyun.com/document_detail/181589.html#section-o93-dbr-z6o"
+      description: "函数计算访问对象存储 OSS 服务时使用的服务角色"
       required: true
       x-role:
         name: fcossrole
         service: fc
         authorities:
           - AliyunOSSFullAccess
-          - AliyunFCDefaultRolePolicy
