--- a/publish.yaml
+++ b/publish.yaml
@@ -4,11 +4,10 @@ Version: 0.0.11
 Provider:
   - 阿里云
 Description: 使用函数计算进行图片压缩
-HomePage: https://github.com/devsapp/start-unzip-oss
+HomePage: https://github.com/rsonghuster/image-compress
 Tags:
-  - OSS上zip文件自动解压
-  - 函数计算 OSS 触发器
-Category: 其它
+  - 图片压缩
+Category: 图文处理
 Service:
   函数计算:
     Authorities:
@@ -21,11 +20,6 @@ Parameters:
     - serviceName
     - functionName
     - roleArn
-    - bucketName
-    - prefix
-    - processedDir
-    - retainFileName
-    - triggerRoleArn
   properties:
     region:
       title: 地域
